syntax = "proto3";

// types
import "bookmark.proto";
import "completion.proto";
import "configuration.proto";
import "filer.proto";
import "keymap.proto";
import "task.proto";

message Request {
  string jsonrpc = 1;
  string id = 2;
  string method = 3;
  oneof params {
    keymap.GetRequest keymapGetRequest = 4;
    keymap.ReloadRequest keymapReloadRequest = 5;
    keymap.StoreRequest keymapStoreRequest = 6;
    filer.MakeRequest filerMakeRequest = 7;
    filer.GetRequest filerGetRequest = 8;
    filer.MoveParentRequest filerMoveParentRequest = 9;
    filer.EnterDirectoryRequest filerEnterDirectoryRequest = 10;
    filer.ToggleMarkRequest filerToggleMarkRequest = 11;
    filer.MoveRequest filerMoveRequest = 12;
    filer.DeleteRequest filerDeleteRequest = 13;
    filer.CopyRequest filerCopyRequest = 14;
    filer.JumpLocationRequest filerJumpLocationRequest = 15;
    configuration.GetRequest configurationGetRequest = 16;
    configuration.StoreRequest configurationStoreRequest = 17;
    completion.SetupRequest completionSetupRequest = 18;
    completion.ReadRequest completionReadRequest = 19;
    bookmark.ListAllRequest bookmarkListAllRequest = 20;
    bookmark.RegisterRequest bookmarkRegisterRequest = 21;
    bookmark.DeleteRequest bookmarkDeleteRequest = 22;
    task.SendReplyRequest taskSendReplyRequest = 23;
    task.CancelRequest taskCancelRequest = 24;
  }
}

message RpcError {
  sint32 code = 1;
  string message = 2;
  string data = 3;
}

message Result {
}

message Response {
  string jsonrpc = 1;
  string id = 2;
  RpcError error = 3;
  oneof result {
    string empty = 4;
    keymap.GetResponse keymapGetResponse = 5;
    keymap.ReloadResponse keymapReloadResponse = 6;
    keymap.StoreResponse keymapStoreResponse = 7;
    filer.MakeResponse filerMakeResponse = 8;
    filer.GetResponse filerGetResponse = 9;
    filer.MoveParentResponse filerMoveParentResponse = 10;
    filer.EnterDirectoryResponse filerEnterDirectoryResponse = 11;
    filer.ToggleMarkResponse filerToggleMarkResponse = 12;
    filer.MoveResponse filerMoveResponse = 13;
    filer.DeleteResponse filerDeleteResponse = 14;
    filer.CopyResponse filerCopyResponse = 15;
    filer.JumpLocationResponse filerJumpLocationResponse = 16;
    configuration.GetResponse configurationGetResponse = 17;
    configuration.StoreResponse configurationStoreResponse = 18;
    completion.SetupResponse completionSetupResponse = 19;
    completion.ReadResponse completionReadResponse = 20;
    bookmark.ListAllResponse bookmarkListAllResponse = 21;
    bookmark.RegisterResponse bookmarkRegisterResponse = 22;
    bookmark.DeleteResponse bookmarkDeleteResponse = 23;
    task.SendReplyResponse taskSendReplyResponse = 24;
    task.CancelResponse taskCancelResponse = 25;
  }
}